.gitignore: add `ostruct`
Signed-off-by: Patrick Linnane <patrick@linnane.io>

--- a/.gitignore
+++ b/.gitignore
@@ -100,6 +100,7 @@
 **/vendor/bundle/ruby/*/gems/msgpack-*/
 **/vendor/bundle/ruby/*/gems/netrc-*/
 **/vendor/bundle/ruby/*/gems/ntlm-http-*/
+**/vendor/bundle/ruby/*/gems/ostruct-*/
 **/vendor/bundle/ruby/*/gems/parallel-*/
 **/vendor/bundle/ruby/*/gems/parallel_tests-*/
 **/vendor/bundle/ruby/*/gems/parlour-*/
